--- a/Database/MySQL/常用语句.md
+++ b/Database/MySQL/常用语句.md
@@ -10,12 +10,13 @@ mysql>source d:\test.sql
 mysql -u root –p
 mysql -u root -p < schema.sql
 show create database db;
-create database if not exists db_name
+CREATE DATABASE <dbname> if not exists CHARACTER SET utf8;(要设置编码，防止创建列出错)
 drop database if exists db;
 show create table t;
 desc tableName;
 rename table t to t1;
 drop table t3;
+alter table small change column STBMAC id text;
 
 ALTER TABLE table_name ADD column_name datatype;
 alter table t add age int;
