--- a/Database/MySQL/常用语句.md
+++ b/Database/MySQL/常用语句.md
@@ -11,18 +11,17 @@ mysql -u root –p
 mysql -u root -p < schema.sql
 show create database db;
 CREATE DATABASE <dbname> if not exists CHARACTER SET utf8;(要设置编码，防止创建列出错)
+ALTER DATABASE DBNAME CHARACTER SET utf8 COLLATE utf8_general_ci;
 drop database if exists db;
 show create table t;
 desc tableName;
 rename table t to t1;
 drop table t3;
 alter table small change column STBMAC id text;
-
 ALTER TABLE table_name ADD column_name datatype;
 alter table t add age int;
 alter table t drop id;
 alter table t modify age tinyint;
-
 alter table t change column name username varchar(30);
 删除主键：alter table stu drop primary key;
 ```
@@ -33,19 +32,13 @@ alter table t change column name username varchar(30);
 
 #### 二, Character set
 
-修改已经存在的数据库的字符集为gbk：
-
-```shell
-alter database db character set gbk;
-```
-
 查看Mysql的支持的字符集:
 show character set
 
 查看数据库中所有的校对规则
 show collation;
 
-Collation校对规则：负责决定某一字符集下的字符进行比较和排序的结果。
+	Collation校对规则：负责决定某一字符集下的字符进行比较和排序的结果。
 
 创建一个数据库db2,字符集用gbk，校对规则用gbk_bin
 create database db1 character set gbk collate gbk_bin;
