--- a/Database/MySQL/常用语句.md
+++ b/Database/MySQL/常用语句.md
@@ -140,3 +140,36 @@ Max/min函数返回满足where条件的一列的最大/最小值
 ```shell
 select max(chinese) from score; select min(chinese) from score;
 ```
+
+### 关于编码
+
+MySQL 的「utf8」实际上不是真正的 UTF-8。
+
+「utf8」只支持每个字符最多三个字节，而真正的 UTF-8 是每个字符最多四个字节。MySQL 一直没有修复这个 bug，他们在 2010 年发布了一个叫作「utf8mb4」的字符集，绕过了这个问题。当然，他们并没有对新的字符集广而告之（可能是因为这个 bug 让他们觉得很尴尬），以致于现在网络上仍然在建议开发者使用「utf8」，但这些建议都是错误的。
+
+简单概括如下：
+
+1. MySQL 的「utf8mb4」是真正的「UTF-8」。
+2. MySQL 的「utf8」是一种「专属的编码」，它能够编码的 Unicode 字符并不多。
+
+我要在这里澄清一下：所有在使用「utf8」的 MySQL 和 MariaDB 用户都应该改用「utf8mb4」，永远都不要再使用「utf8」。
+
+#### 什么是编码？什么是 UTF-8？
+
+我们都知道，计算机使用 0 和 1 来存储文本。比如字符「C」被存成「01000011」，那么计算机在显示这个字符时需要经过两个步骤：
+
+1. 计算机读取「01000011」，得到数字67(也就是「01000011」的十进制形式)，
+2. 计算机在Unicode字符集中查找 67，找到了「C」。
+
+同样的：
+
+1. 我的电脑将「C」映射成Unicode字符集中的 67。
+2. 我的电脑将67编码成「01000011」，并发送给 Web 服务器。
+
+几乎所有的网络应用都使用了 Unicode 字符集，因为没有理由使用其他字符集。
+
+Unicode 字符集包含了上百万个字符。最简单的编码是 UTF-32，每个字符使用 32 位。这样做最简单，但问题是，这样太浪费空间了。
+
+UTF-8 可以节省空间，在 UTF-8 中，字符「C」只需要 8 位，一些不常用的字符，比如「」需要 32 位。其他的字符可能使用 16 位或 24 位。一篇类似本文这样的文章，如果使用 UTF-8 编码，占用的空间只有 UTF-32 的四分之一左右。
+
+MySQL 的「utf8」字符集与其他程序不兼容，它所谓的字符集，可能真的是一坨……
