--- a/Database/MySQL/常用语句.md
+++ b/Database/MySQL/常用语句.md
@@ -11,7 +11,9 @@ mysql> source d:\test.sql
 mysql -u root –p
 mysql -u root -p < schema.sql
 show create database db;
-CREATE DATABASE if not exists <dbname> CHARACTER SET utf8;(要设置编码，防止创建列出错)
+CREATE DATABASE if not exists <dbname> CHARACTER SET utf8mb4;
+# (要设置编码，防止创建列出错)
+
 ALTER DATABASE DBNAME CHARACTER SET utf8 COLLATE utf8_general_ci;
 drop database if exists <db_name>;
 show create table t;
