--- a/Database/MySQL/常用语句.md
+++ b/Database/MySQL/常用语句.md
@@ -1,6 +1,6 @@
-#### 一, Commonly used statements
+### Commonly used statements
 
-##### 1, database backup and restore
+#### database backup and restore
 
 ```shell
 mysqldump -u root -p1 test > d:\test.sql
@@ -27,19 +27,20 @@ alter table t drop id;
 alter table t modify age tinyint;
 alter table t change column name username varchar(30);
 删除主键：alter table stu drop primary key;
+
+清空表中的所有数据: delete from <tablename>
 ```
 
 * 删除主键之前一定要删除当前主键的外键约束
 * not null 非空约束，此字段值不能为空
 * unique 唯一约束，此字段值必须唯一，但可以为空
 
-#### 二, Character set
+#### Character set
 
 查看Mysql的支持的字符集:
 show character set
 
-查看数据库中所有的校对规则
-show collation;
+查看数据库中所有的校对规则: show collation;
 
 	Collation校对规则：负责决定某一字符集下的字符进行比较和排序的结果。
 
