--- a/Database/SQL/查询操作.md
+++ b/Database/SQL/查询操作.md
@@ -48,3 +48,78 @@ SELECT查询的结果是一个二维表。
 使用<>判断不相等     score <> 80       name <> 'abc'   
 使用LIKE判断相似    name LIKE 'ab%'    name LIKE '%bc%'    %表示任意字符，  例如'ab%'将匹配'ab'，'abc'，'abcd'(%表示0个到多个，_表示1个)
 
+### 投影查询
+
+使用`SELECT * FROM <表名> WHERE <条件>`返回的二维表结构和原表是相同的，即结果集的所有列与原表的所有列都一一对应。
+
+>使用SELECT *表示查询表的所有列,如果只希望返回某些列，而不是所有列，我们可以用SELECT 列1, 列2, 列3 FROM ...，让结果集仅包含指定列。这种操作称为投影查询。
+
+`SELECT id, score, name FROM students;`
+
+>这样返回的结果集的列的顺序和原表可以不一样。
+
+给每一列起个别名:`SELECT 列1 别名1, 列2 别名2, 列3 别名3 FROM ...;`
+
+id和name列名保持不变,score重命名为points：`SELECT id, score points, name FROM students;`
+
+投影查询同样可以接WHERE条件，实现复杂的查询：
+`SELECT id, score points, name FROM students WHERE gender = 'M';`
+
+### 排序
+
+用SELECT查询时，查询结果集通常是按照id排序的，也就是根据主键排序。这也是大部分数据库的做法。如果我们要根据其他条件排序怎么办？可以加上ORDER BY子句。例如按照成绩从低到高进行排序：
+
+`SELECT id, name, gender, score FROM students ORDER BY score;`
+
+我们可以加上DESC表示“降序”:
+
+`SELECT id, name, gender, score FROM students ORDER BY score DESC;`
+
+如果score列有相同的数据，要进一步排序，可以继续添加列名。例如，使用ORDER BY score DESC, gender表示先按score列倒序，如果有相同分数的，再按gender列排序：
+
+`SELECT id, name, gender, score FROM students ORDER BY score DESC, gender;`
+
+>默认的排序规则是ASC：“升序”，即从小到大。ASC可以省略，即ORDER BY score ASC和ORDER BY score效果一样。
+
+如果有WHERE子句，那么ORDER BY子句要放到WHERE子句后面:
+
+`SELECT id, name, gender, score FROM students WHERE class_id = 1 ORDER BY score DESC;`
+
+### 分页查询
+
+使用SELECT查询时，如果结果集数据量很大，放在一个页面显示的话数据量太大，不如分页显示，每次显示100条。要实现分页功能，实际上就是从结果集中显示第1~100条记录作为第1页，显示第101~200条记录作为第2页，以此类推。
+
+因此，分页实际上就是从结果集中“截取”出第M~N条记录。这个查询可以通过`LIMIT <M> OFFSET <N>`子句实现。我们先把所有学生按照成绩从高到低进行排序：
+
+`SELECT id, name, gender, score FROM students ORDER BY score DESC LIMIT 3 OFFSET 0;`
+
+>上述查询LIMIT 3 OFFSET 0表示，对结果集从0号记录开始，最多取3条。注意SQL记录集的索引从0开始。
+
+如果要查询第2页，那么我们只需要“跳过”头3条记录，也就是对结果集从3号记录开始查询，把OFFSET设定为3：
+
+`SELECT id, name, gender, score FROM students ORDER BY score DESC LIMIT 3 OFFSET 3;`
+
+类似的，查询第3页的时候，OFFSET应该设定为6,查询第4页的时候，OFFSET应该设定为9,由于第4页只有1条记录，因此最终结果集按实际数量1显示。LIMIT 3表示的意思是“最多3条记录”。
+
+分页查询的关键在于:`首先要确定每页需要显示的结果数量pageSize（这里是3），然后根据当前页的索引pageIndex（从1开始），确定LIMIT和OFFSET应该设定的值`：
+
+1. LIMIT总是设定为pageSize；
+2. OFFSET计算公式为pageSize * (pageIndex - 1)。
+
+这样就能正确查询出第N页的记录集。
+
+>分页查询需要先确定每页的数量和当前页数，然后确定LIMIT和OFFSET的值。
+
+如果原本记录集一共就10条记录，但我们把OFFSET设置为20，会得到什么结果呢？
+
+`SELECT id, name, gender, score FROM students ORDER BY score DESC LIMIT 3 OFFSET 20;`
+
+>OFFSET超过了查询的最大数量并不会报错，而是得到一个空的结果集。
+
+#### 注意
+
+1. OFFSET是可选的，如果只写LIMIT 15，那么相当于LIMIT 15 OFFSET 0。
+2. 在MySQL中，LIMIT 15 OFFSET 30还可以简写成LIMIT 30, 15。
+3. 使用LIMIT <M> OFFSET <N>分页时，随着N越来越大，查询效率也会越来越低。
+
+### 
