--- a/Database/SQL/查询操作.md
+++ b/Database/SQL/查询操作.md
@@ -122,4 +122,95 @@ id和name列名保持不变,score重命名为points：`SELECT id, score points, 
 2. 在MySQL中，LIMIT 15 OFFSET 30还可以简写成LIMIT 30, 15。
 3. 使用LIMIT <M> OFFSET <N>分页时，随着N越来越大，查询效率也会越来越低。
 
-### 
+### 聚合查询
+
+>对于统计总数、平均数这类计算，SQL提供了专门的聚合函数，使用聚合函数进行查询，就是聚合查询，它可以快速获得结果。
+
+查询students表一共有多少条记录:`SELECT COUNT(*) FROM students;`
+
+>COUNT(*)表示查询所有列的行数，要注意聚合的计算结果虽然是一个数字，但查询的结果仍然是一个二维表，只是这个二维表只有一行一列，并且列名是COUNT(*)。通常，使用聚合查询时，我们应该给列名设置一个别名，便于处理结果：
+
+使用聚合查询并设置结果集的列名为num:`SELECT COUNT(*) num FROM students;`
+
+>COUNT(*)和COUNT(id)实际上是一样的效果。另外注意，聚合查询同样可以使用WHERE条件，因此我们可以方便地统计出有多少男生、多少女生、多少80分以上的学生等：
+
+`SELECT COUNT(*) boys FROM students WHERE gender = 'M';`
+
+>除了COUNT()函数外，SQL还提供了如下聚合函数：
+
+函数  说明
+SUM  计算某一列的合计值，该列必须为`数值类型`
+AVG  计算某一列的平均值，该列必须为`数值类型`
+MAX  计算某一列的最大值
+MIN  计算某一列的最小值
+
+>注意，MAX()和MIN()函数并不限于数值类型。如果是字符类型，MAX()和MIN()会返回排序最后和排序最前的字符。
+
+要统计男生的平均成绩:`SELECT AVG(score) boys_avg_score FROM students WHERE gender = 'M';`
+
+>要特别注意：如果聚合查询的WHERE条件没有匹配到任何行，COUNT()会返回0，而SUM()、AVG()、MAX()和MIN()会返回NULL,例如:`SELECT AVG(score) avg FROM students WHERE gender = 'X';`
+
+#### 分组
+
+SQL还提供了“分组聚合”的功能,例如统计一班，二班，三班的学生:`SELECT COUNT(*) num FROM students GROUP BY class_id;`
+
+>执行这个查询，COUNT()的结果不再是一个，而是3个，这是因为，GROUP BY子句指定了按class_id分组，因此，执行该SELECT语句时，会把class_id相同的列先分组，再分别计算，因此，得到了3行结果。但是这3行结果分别是哪三个班级的，不好看出来，所以我们可以把class_id列也放入结果集中：`SELECT class_id, COUNT(*) num FROM students GROUP BY class_id;`
+
+`SELECT name, class_id, COUNT(*) num FROM students GROUP BY class_id;`
+
+>不出意外，执行这条查询我们会得到一个语法错误，因为在任意一个分组中，只有class_id都相同，name是不同的，`SQL引擎不能把多个name的值放入一行记录中`。因此，聚合查询的列中，只能放入分组的列。
+
+也可以使用多个列进行分组。例如，我们想统计各班的男生和女生人数：
+
+`SELECT class_id, gender, COUNT(*) num FROM students GROUP BY class_id, gender;`
+
+请使用一条SELECT查询查出每个班级的平均分：`SELECT class_id, AVG(score) avg_score FROM students GROUP BY class_id;`
+
+请使用一条SELECT查询查出每个班级男生和女生的平均分：`SELECT class_id, gender, AVG(score) avg_score FROM students GROUP BY class_id, gender;`
+
+### 多表查询
+
+>SELECT查询不但可以从一张表查询数据，还可以从多张表同时查询数据。查询多张表的语法是：SELECT * FROM <表1> <表2>。
+
+`SELECT * FROM students, classes;`
+
+>这种一次查询两个表的数据，查询的结果也是一个二维表，它是students表和classes表的“乘积”，即students表的每一行与classes表的每一行都两两拼在一起返回。结果集的列数是students表和classes表的列数之和，行数是students表和classes表的行数之积。
+
+>这种多表查询又称笛卡尔查询，使用笛卡尔查询时要非常小心，由于结果集是目标表的行数乘积，对两个各自有100行记录的表进行笛卡尔查询将返回1万条记录，对两个各自有1万行记录的表进行笛卡尔查询将返回1亿条记录。
+
+上述查询的结果集有两列id和两列name，两列id是因为其中一列是students表的id，而另一列是classes表的id，但是在结果集中，不好区分。两列name同理,要解决这个问题，我们仍然可以利用投影查询的“设置列的别名”来给两个表各自的id和name列起别名：
+
+`SELECT 
+        students.id sid, 
+        students.name name, 
+        students.gender gender, 
+        students.score score, 
+        classes.id cid, 
+        classes.name cname 
+FROM students, classes;`
+
+多表查询时，要使用表名.列名这样的方式来引用列和设置别名，这样就避免了结果集的列名重复问题。但是，用表名.列名这种方式列举两个表的所有列实在是很麻烦，所以SQL还允许给表设置一个别名，让我们在投影查询中引用起来稍微简洁一点：
+
+`SELECT 
+        s.id sid,
+        s.name name,
+        s.gender gender,
+        s.score score,
+        c.id cid,
+        c.name, cname
+FROM students s, classes c;`
+
+注意到FROM子句给表设置别名的语法是FROM <表名1> <别名1>, <表名2> <别名2>。这样我们用别名s和c分别表示students表和classes表。
+
+多表查询也是可以添加WHERE条件的，我们来试试：
+
+`SELECT s.id sid, s.name name, s.gender gender, s.score score, c.id cid, c.name cname FROM students s, classes c WHERE s.gender = 'M' AND c.id = 1;`
+
+添加WHERE条件后结果集的数量大大减少了。
+
+* 使用多表查询可以获取M x N行记录；
+* 多表查询的结果集可能非常巨大，要小心使用。
+
+### 连接查询
+
+
