--- a/JAVA/EE/SpringMVC/SpringFormValidation/src/main/resources/message_en.properties
+++ b/JAVA/EE/SpringMVC/SpringFormValidation/src/main/resources/message_en.properties
@@ -1,3 +1,7 @@
+#这里要注意的唯一要点是查询消息的方式，第一个键名{ValidationClass}.{modelObjectName}.{field}被查找，
+# 如果找不到，那么{ValidationClass}.{modelObjectName}被查找。
+# 如果缺少那个，那么最后查找{ValidationClass}键。
+# 如果未找到任何内容，则将返回提供的默认消息。
 #application defined error messsages
 id.required=Employee ID is required
 name.required=Employee Name is required
