--- a/Database/MySQL/常用语句.md
+++ b/Database/MySQL/常用语句.md
@@ -14,9 +14,11 @@ show create database db;
 CREATE DATABASE if not exists <dbname> CHARACTER SET utf8mb4;
 # (要设置编码，防止创建列出错)
 
-ALTER DATABASE DBNAME CHARACTER SET utf8 COLLATE utf8_general_ci;
+ALTER DATABASE <DBNAME> CHARACTER SET utf8 COLLATE utf8_general_ci;
 drop database if exists <db_name>;
-show create table t;
+
+查看表编码格式:`show create table t;`
+
 desc tableName;
 rename table t to t1;
 drop table t3;
@@ -35,26 +37,59 @@ alter table t change column name username varchar(30);
 * not null 非空约束，此字段值不能为空
 * unique 唯一约束，此字段值必须唯一，但可以为空
 
-#### Character set
+#### 字符集(CHARACTER SET)
 
-查看Mysql的支持的字符集:
-show character set
+无论哪种文字，日文，韩文，中文，英文，在计算机上存储的时候都是0和1构成.
+查看当前数据库的字符集:` show variables like 'char%'`,
+查看Mysql的支持的所有字符集:`SHOW CHARACTER SET;`，`每种字符集中字符串最多能占有的字节数`不同，utf8(注意utf8是使用Unicode方式编码的)这种字符集的每个字符`最多`能占有3个字节，utf8mb4这种字符集的每个字符`最多`占有4个字节.(CHARACTER SET中的Maxlen就代表了每个字符不一定非占满，有的字符占的字节多，有的少)
 
-查看数据库中所有的校对规则: show collation;
+>某些字符集(例如utf8)包含了多字节字符，但某个字符串可能只包含单字节字符.例如中文在utf8字符集中.
 
-	Collation校对规则：负责决定某一字符集下的字符进行比较和排序的结果。
+MySQL提供了LENGTH函数来获取`一个字符串占有多少个字节`，CHAR_LENGTH函数用于获取`字符串的长度`，如果字符串中的`某个字符占有多个字节`，则LENGTH函数的结果大于CHAR_LENGTH()函数的结果，例如:
+
+```sql
+SET @str = CONVERT('MySQL' USING ucs2);
+-- ucs2这种字符集的每个字符占有的字节数是2
+SELECT LENGTH(@str), CHAR_LENGTH(@str);
+```
+
+得到: LENGTH(@str)=10,  CHAR_LENGTH(@str)=5,
+即：字符串长度为5，这个字符串占有的字节数为10.
+
+>CONVERT函数将字符串转换为指定的字符集.
+
+##### 设置客户端连接的字符集
+
+1. 客户端连接到MySQL数据库服务器后发出SET NAME语句。 例如，要设置字符集为使用Unicode编码的utf8字符集，请使用以下语句：`SET NAMES 'utf8';`
+2. mysql客户端工具支持--default-character-set，您可以在配置文件中进行如下设置：
+```
+[mysql]
+default-character-set=utf8
+```
+3. 一些MySQL连接器允许您设置字符集，例如:项目中的application-dev.yml:`url: jdbc:mysql://127.0.0.1:3306/bootdo?useUnicode=true&characterEncoding=utf8`
+4. 无论使用哪种方式，请确保`应用程序使用的字符集`与`存储在MySQL数据库服务器`中的字符集匹配。
+5. 设置客户端的字符集为gbk:`set character_set_client = 'gbk';`
+6. 设置结果集的字符集为gbk:`set character_set_results = 'gbk';`
+7. character_set_client：`客户端请求数据的字符集`
+8. character_set_connection:连接层字符集
+9. character_set_database：默认数据库的字符集，无论默认数据库如何改变，都是这个字符集；如果没有默认数据库，那就使用 character_set_server指定的字符集，这个变量建议由系统自己管理，不要人为定义。
+10. character_set_results：结果集，返回给客户端的字符集
+11. character_set_server：数据库服务器的默认字符集
+
+>直接在cmd命令行设置的编码是session级别的。也就是说，我们设置的编码只在当前会话起作用。关闭掉当前会话，重新开启，设置就会失效。如果设置多个会话的字符集那么需要设置global范围:Set [global|session] variables …(不论设置session级别的还是global级别的，重启sql以后，都会失效.)
+
+### 校对规则
+
+查看当前数据库的校对规则:`show variables like 'collation%';`
+查看数据库中所有的校对规则: `show collation;`
+
+>Collation校对规则：负责决定某一字符集下的字符进行比较和排序的结果。
 
 创建一个数据库db2,字符集用gbk，校对规则用gbk_bin
 create database db1 character set gbk collate gbk_bin;
 
 查看中文校对规则
 show collation like '%gb%';
-
-设置客户端的字符集为gbk
-set character_set_client = gbk;
-
-设置结果集的字符集为gbk
-set character_set_results = gbk;
 
 show variables like 'validate_password%';
 
