--- a/Database/SQL/查询操作.md
+++ b/Database/SQL/查询操作.md
@@ -217,9 +217,7 @@ FROM students s, classes c;`
 
 `SELECT s.id, s.name, s.class_id, s.gender, s.score FROM students s;`
 
-假设我们希望结果集同时包含所在班级的名称，上面的结果集只有class_id列，缺少对应班级的name列。
-
-现在问题来了，存放班级名称的name列存储在classes表中，只有根据students表的class_id，找到classes表对应的行，再取出name列，就可以获得班级名称。
+假设我们希望结果集同时包含"学生姓名"以及"这个学生所在班级的名称"，上面的结果集只有class_id列，缺少对应班级的name列。现在问题来了，存放班级名称的name列存储在classes表中，只有根据students表的class_id，找到classes表对应的行，再取出name列，就可以获得班级名称。
 
 这时，`连接查询`就派上了用场。我们先使用最常用的一种内连接——INNER JOIN来实现：
 
@@ -235,7 +233,7 @@ FROM students s INNER JOIN classes c ON s.class_id = c.id;`
 
 使用别名不是必须的，但可以更好地简化查询语句。
 
->那什么是内连接（INNER JOIN）呢？先别着急，有内连接（INNER JOIN）就有外连接（OUTER JOIN）。我们把内连接查询改成外连接查询，看看效果：
+>那什么是内连接（INNER JOIN）呢？有内连接（INNER JOIN）就有外连接（OUTER JOIN）。我们把内连接查询改成外连接查询，看看效果：
 
 `SELECT s.id, s.name, s.class_id, c.name class_name, s.gender, s.score
 FROM students s
@@ -250,9 +248,9 @@ ON s.class_id = c.id;`
 
 INNER JOIN只返回同时存在于两张表的行数据，由于students表的class_id包含1，2，3，classes表的id包含1，2，3，4，所以，INNER JOIN根据条件s.class_id = c.id返回的结果集仅包含1，2，3。
 
-RIGHT OUTER JOIN返回右表都存在的行。如果某一行仅在右表存在，那么结果集就会以NULL填充剩下的字段。
+RIGHT OUTER JOIN返回右表(本例中即classes表)都存在的行。如果某一行仅在右表存在，那么结果集就会以NULL填充剩下的字段。
 
-LEFT OUTER JOIN则返回左表都存在的行。如果我们给students表增加一列，并添加class_id=5，由于classes表并不存在id=5的列，所以，LEFT OUTER JOIN的结果会增加一列，对应的class_name是NULL：
+LEFT OUTER JOIN则返回左表(本例中为students表)都存在的行。如果我们给students表增加一列，并添加class_id=5，由于classes表并不存在id=5的列，所以，LEFT OUTER JOIN的结果会增加一列，对应的classes表中的class_name是NULL：
 
 `SELECT s.id, s.name, s.class_id, c.name class_name, s.gender, s.score
 FROM students s
