--- a/Database/MySQL/常用语句.md
+++ b/Database/MySQL/常用语句.md
@@ -1,23 +1,94 @@
-### Commonly used statements
+mysql登录:`mysql -h hostname -u root -p`
 
-#### database backup and restore
+数据库备份:`mysqldump -u root -p1 test > d:\test.sql`
 
-```shell
-mysqldump -u root -p1 test > d:\test.sql
-mysql> source d:\test.sql
+数据库恢复:`mysql> source d:\test.sql` or `mysql -u root -p < schema.sql`
+
+创建数据库:`CREATE DATABASE if not exists <dbname> CHARACTER SET utf8mb4;`
+
+查看创建数据库的SQL语句:`show create database db;`
+
+删除数据库:`drop database if exists <db_name>;`
+
+>注意：删除一个数据库将导致该数据库的所有表全部被删除。
+
+列出当前数据库的所有表，使用命令：`SHOW TABLES;`
+
+要查看一个表的结构，使用命令：`DESC students;`
+
+查看创建表的SQL语句:`SHOW CREATE TABLE students;`
+
+删除表使用DROP TABLE语句：`DROP TABLE students;`
+
+修改表就比较复杂。如果要给students表新增一列birth:`ALTER TABLE students ADD COLUMN birth VARCHAR(10) NOT NULL;`
+
+要修改birth列，例如把列名改为birthday，类型改为VARCHAR(20)：`ALTER TABLE students CHANGE COLUMN birth birthday VARCHAR(20) NOT NULL;`
+
+删除列使用:`ALTER TABLE students DROP COLUMN birthday;`
+
+如果我们希望插入一条新记录（INSERT），但如果记录已经存在，就先删除原记录，再插入新记录。此时，可以使用REPLACE语句，这样就不必先查询，再决定是否先删除再插入：`REPLACE INTO students (id, class_id, name, gender, score) VALUES (1, 1, '小明', 'F', 99);`
+
+>若id=1的记录不存在，REPLACE语句将插入新记录，否则，当前id=1的记录将被删除，然后再插入新记录。
+
+如果我们希望插入一条新记录（INSERT），但如果记录已经存在，就更新该记录，此时，可以使用INSERT INTO ... ON DUPLICATE KEY UPDATE ...语句：
+`INSERT INTO students (id, class_id, name, gender, score) VALUES (1, 1, '小红', 'F', 88) ON DUPLICATE KEY UPDATE name='小艳', gender='F', score=89;`
+
+>若id=1的记录不存在，INSERT语句将插入新记录，否则，当前id=1的记录将被更新，更新的字段由UPDATE指定。
+
+如果我们希望插入一条新记录（INSERT），但如果记录已经存在，就啥事也不干直接忽略，此时，可以使用INSERT IGNORE INTO ...语句：`INSERT IGNORE INTO students (id, class_id, name, gender, score) VALUES (1, 1, '小张', 'M', 60);`
+
+>若id=1的记录不存在，INSERT语句将插入新记录，否则，不执行任何操作。
+
+>如果想要对一个表进行快照，即复制一份当前表的数据到一个新表，可以结合CREATE TABLE和SELECT:
+
+```sql
+-- 对class_id=1的记录进行快照，并存储为新表students_of_class1:
+-- 新创建的表结构和SELECT使用的表结构完全一致。
+CREATE TABLE students_of_class1 SELECT * FROM students WHERE class_id=1;
 ```
 
-```shell
-mysql -u root –p
-mysql -u root -p < schema.sql
-show create database db;
-CREATE DATABASE if not exists <dbname> CHARACTER SET utf8mb4;
-# (要设置编码，防止创建列出错)
+如果查询结果集需要写入到表中，可以结合INSERT和SELECT，将SELECT语句的结果集直接插入到指定表中.
+
+创建一个统计成绩的表statistics，记录各班的平均成绩：
+
+```sql
+CREATE TABLE statistics (
+	id BIGINT NOT NULL AUTO_INCREMENT,
+	class_id BIGINT NOT NULL,
+	average DOUBLE NOT NULL,
+	PRIMARY KEY (id)
+);
+```
+
+然后，我们就可以用一条语句写入各班的平均成绩：
+`INSERT INTO statistics (class_id, average) SELECT class_id, AVG(score) FROM students GROUP BY class_id;`
+
+>确保INSERT语句的列和SELECT语句的列能一一对应，就可以在statistics表中直接保存查询的结果.
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 ALTER DATABASE <DBNAME> CHARACTER SET utf8 COLLATE utf8_general_ci;
-drop database if exists <db_name>;
-
-查看表编码格式:`show create table t;`
 
 desc tableName;
 rename table t to t1;
