--- a/JAVA/core/src/main/resources/并发编程/2.0-Java并发编程基础API/2.4-线程的休眠以及线程的中断.md
+++ b/JAVA/core/src/main/resources/并发编程/2.0-Java并发编程基础API/2.4-线程的休眠以及线程的中断.md
@@ -29,3 +29,49 @@
 
 ## Thread类的join方法
 
+Thread类有一个join方法，其作用是：在A线程中调用了另外一个线程对象B的join方法时，那么A线程必须等待B线程执行完才能继续往下执行。
+
+Thread类型还定义了其他两个可以设置等待时间的join方法：
+
+1. java.lang.Thread#join(long millis, int nanos)
+2. java.lang.Thread#join(long millis)
+
+>这个两个方法都是在等待了指定的时间后，如果另外一个线程还没执行完，就不管了，继续往下执行。
+
+### join方法的实际作用
+
+考虑某个网页上需要展示给用户看的数据存在两个不同的数据库里面。假设从A库查询需要5秒，从B库查询需要2秒。如果我们在一个线程中运行，那么总共就需要7秒。但是如果我们使用了以上的方式，使用2个线程分别去查，先执行完的等待后执行完的，也就是说只需要2秒就查询完成的那个任务等待需要5秒的那个任务，那么总共我们只需要5秒就可以查询到所有的数据，将其返回给用户。
+
+## 线程的优先级
+
+Java中Thread对象有一个`优先级`的概念，`优先级被划分10个级别`，创建线程的时候，`如果没有指定优先级，默认是5`。`主线程的优先级也是5`。优先级高的线程会比优先级低的线程获得更多的运行机会。
+
+Thread类定义了3个整形常量MAX_PRIORITY、NORM_PRIORITY、MIN_PRIORITY分别用于表示支持的最高优先级，正常优先级和最低优先级。同时提供了一个getPriority()方法来获取当前线程优先级。
+
+>示例:org.java.core.base.concurrent.chapter2.PriorityDemo.java
+
+从结果中我们好像看到优先级高的线程P10好像并没有比优先级低的线程P1在执行的时候有什么优势。这是因为线程的执行是抢占式的，优先级高的线程只是理论上会更优先的获取执行的机会，但并不意味着一定优先执行。
+
+事情真的是这样简单吗？
+
+事实上，并不是所有的操作系统都支持优先级的设置，有些操作系统会直接忽略优先级的设置。`因此在实际开发中，尽量不要去设置一个线程运行时的优先级，因为结果可能不是你想要的那样。`
+
+>提示：可以通过jps+jstack工具查看线程运行时的优先级。
+
+首先通过jps命令查看当前操作系统中正在运行的java进程。
+
+```shell
+// 注意在windows上也有相应的exe可以运行
+[root@work]# jps -l
+21204 PriorityDemo2
+```
+
+21204是进程的编号，你的可能与我不一样，接着使用`jstack 21204`查看对应进程的线程信息，输出的内容可能会有很多，最好将其导入到一个文件中，我们需要通过搜索关键字"P1"和"P10"找到我们关心的部分。
+
+需要注意的是，不同的操作系统，不同的JVM版本上导出的内容可能是不一样的。
+
+```
+其中prio，表示的是JVM设置的优先级,os_prio表示的是对应的操作系统线程的优先级(前面我们提到过，JVM线程和操作系统线程是一一对应的)。
+
+可以看到在windows操作系统上，线程优先级好像是有作用的，P1和P10线程对应的操作系统优先级是不一样的。但是对于CentOS 6.5，可以看到对应的线程优先级都是0，事实上说明，线程的优先级设置被忽略了。 
+```
