--- a/JAVA/core/src/main/resources/并发编程/3.0-Java同步与锁/3.9-wait-notify-线程通信方式总结.md
+++ b/JAVA/core/src/main/resources/并发编程/3.0-Java同步与锁/3.9-wait-notify-线程通信方式总结.md
@@ -85,11 +85,143 @@ while(!sharedSignal.hasDataToProcess()){
 }
 ```
 
->忙等待没有对运行等待线程的CPU进行有效的利用，除非平均等待时间非常短。否则，让等待线程进入睡眠或者非运行状态更为明智，直到它接收到它等待的信号。
+>忙等待没有对运行等待线程的CPU进行有效的利用，除非平均等待时间非常短。否则，让等待线程进入睡眠或者非运行状态更为明智，直到它接收到等待的信号。
 
 ### 线程通信时要注意的问题
 
-未完
+#### 丢失的信号（Missed Signals）
+
+看一段可能丢失信号，可能导致线程永远 不能被唤醒的代码:
+
+```java
+public class MonitorObject{
+}
+ 
+public class MyWaitNotify{
+ 
+  MonitorObject myMonitorObject = new MonitorObject();
+ 
+  public void doWait(){
+    synchronized(myMonitorObject){
+      try{
+        myMonitorObject.wait();
+      } catch(InterruptedException e){...}
+    }
+  }
+ 
+  public void doNotify(){
+    synchronized(myMonitorObject){
+      myMonitorObject.notify();
+    }
+  }
+}
+```
+
+以上代码，如果通知线程先调用了doNotify()方法，这个时候可能没有线程处于等待状态，通知信号过后便丢 弃了，在通知线程调用doNotify()方法之后，等待线程才被调用，这可能使等待线程永远在等待，不再醒来，因为线程错过了唤醒信号。
+
+为了避免丢失信号，必须把它们保存在信号类里,解决方法如下:
+```java
+public class MyWaitNotify2{
+ 
+  MonitorObject myMonitorObject = new MonitorObject();
+  boolean wasSignalled = false;//表示通知线程是否已经通知过了，
+  //如果通知过了，等待线程就不要等待了.
+ 
+  public void doWait(){
+    synchronized(myMonitorObject){
+      if(!wasSignalled){// 如果通知过了，等待线程就不要等待了.
+        try{
+          myMonitorObject.wait();
+         } catch(InterruptedException e){...}
+      }
+      //clear signal and continue running.
+      wasSignalled = false;
+    }
+  }
+ 
+  public void doNotify(){
+    synchronized(myMonitorObject){
+      wasSignalled = true;
+      myMonitorObject.notify();
+    }
+  }
+}
+```
+
+#### 假唤醒
+
+由于莫名其妙的原因，线程有可能在没有调用过notify()和notifyAll()的情况下醒来。这就是所谓的假唤醒（spurious wakeups）。无端端地醒过来了。
+
+如果发生了假唤醒，等待线程即使没有收到正确的信号，也能够执行后续的操作。这可能导致你的应用程序出现严重问题。
+
+为了防止假唤醒，保存信号的成员变量将在一个while循环里接受检查，而不是在if表达式里。这样的一个while循环叫做自旋锁（校注：这种做法要慎重，目前的JVM实现自旋会消耗CPU，如果长时间不调用doNotify方法，doWait方法会一直自旋，CPU会消耗太大）。被唤醒的线程会自旋直到自旋锁(while循环)里的条件变为false。
+
+```java
+public class MyWaitNotify3 {
+  MonitoObject myMonitorObject = new MonitorObject();
+  boolean wasSignalled = false;
+
+  public void doWait() {
+      synchronized(myMonitorObject){
+        while(!wasSignalled){
+          try{
+             myMonitorObject.wait();
+           }catch(InterruptedException e){}
+        }
+        // clear signal and continue running.
+        wasSignalled = false;
+      }
+  }
+
+  public void doNotify(){
+    synchronized(myMonitorObject){
+      wasSignalled = true;
+      myMonitorObject.notify();
+    }
+  }
+}
+```
+
+留意wait()方法是在while循环里，而不在if表达式里。如果等待线程没有收到信号就唤醒，wasSignalled变量将变为false,while循环会再执行一次，促使醒来的线程回到等待状态。
+
+#### 多个线程等待相同信号
+
+如果你有多个线程在等待，被notifyAll()唤醒，但只有一个被允许继续执行，使用while循环也是个好方法(上面的MyWaitNotify3)。只有一个线程可以获得监 视器对象锁，意味着只有一个线程可以退出wait()调用，并清除wasSignalled标志（设为false）。一旦这个线程退出doWait()的同 步块，其他等待同样信号的线程就会获得myMonitorObject这个监视器对象锁,这个时候，其他线程退出wait()调用，并在while循环里检查wasSignalled变量值。但是，这个标志已经被第一个唤醒的线程清除了，所以其余 醒来的线程将回到等待状态，直到下次信号到来。
+
+#### 不要在字符串常量或全局对象中调用wait()
+
+```java
+public class MyWaitNotify{
+ 
+  String myMonitorObject = "";//使用字符串常量（””）作为管程对象
+  boolean wasSignalled = false;
+ 
+  public void doWait(){
+    synchronized(myMonitorObject){
+      while(!wasSignalled){
+        try{
+          myMonitorObject.wait();
+         } catch(InterruptedException e){...}
+      }
+      //clear signal and continue running.
+      wasSignalled = false;
+    }
+  }
+ 
+  public void doNotify(){
+    synchronized(myMonitorObject){
+      wasSignalled = true;
+      myMonitorObject.notify();
+    }
+  }
+}
+```
+
+使用空字符串(或者其他常量字符串)作为同步块的锁，调用wait()和notify()产生的问题是:
+
+JVM/编译器内部会把常量字符串转换成同一个对象。这意味着，即使你有2个不同的MyWaitNotify实例，它们都引用了相同的空字符串实例(即用了同一把锁)。同时也存在这样的风险：在第一个 MyWaitNotify实例上调用doWait()的线程会被在第二个MyWaitNotify实例上调用doNotify()的线程唤醒。
+
+未完.
 
 ## sleep()方法与wait方法的区别
 
