--- a/JAVA/core/src/main/resources/并发编程/5.0-Java并发包--同步组件/5.3-AbstractQueuedSynchronizer.md
+++ b/JAVA/core/src/main/resources/并发编程/5.0-Java并发包--同步组件/5.3-AbstractQueuedSynchronizer.md
@@ -29,9 +29,7 @@
 
 >例如：ReentryLock、ReentryReadWriteLock、和CountDownLatch等都是在AQS的基础上编写的
 
-不管是独占式同步组件还是共享式同步组件，使用的过程`本质上都是获取许可与释放许可`。而获取与释放许可过程中最关键的又是对于许可数量的维护以及等待队列的维护。而AQS对这二者都提供了支持：
-
-可用许可的数量的支持：它使用了1个一个int类型state变量，表示同步状态，也就是说笔者所说执行许可。初始值默认为0。最简单的情况下，假设我们限定最多有5个许可，那么state值为0就表示当前一个许可未使用。线程每获取一个许可，state变量+1，表示已经使用了几个许可。当然state变量的含义是由开发者定义的，你完全可以用负数例如state为-5时，表示5个许可都被释放完。
+不管是独占式同步组件还是共享式同步组件，使用的过程`本质上都是获取许可与释放许可`。而获取与释放许可过程中最关键的又是对于许可数量的维护以及等待队列的维护。而AQS对这二者都提供了支持.
 
 等待队列的支持 ：通过内置的FIFO队列来完成资源获取线程的排队工作，队列的节点是基于内部静态类Node实现
 
@@ -76,42 +74,43 @@ protected final boolean compareAndSetState(int expect, int update) {
 
 因为获取许可与释放许可的过程中，会同时涉及state变量的维护和等待队列的维护。为了减少操作的复杂性， AQS是基于模板设计模式实现的，通过对模板方法的调用，可以保证对state变量和等待队列维护的一致性。
 
-#### AQS模板方法列表
+#### AQS(AbstractQueuedSynchronizer)模板方法列表
 
 方法名称                    描述
-void acquire(int arg)   独占式获取同步状态，如果当前线程获取同步状态成功，则由该方法返回，否则，将会进入同步队列等待，该方法将会调用重写的tryAcquire(int arg)方法
-void acquireInterruptibly(int arg)  与tryAcquire(int arg)相同，但是该方法响应中断，当前线程未获取到同步状态而进入同步队列中，如果当前线程被中断，则该方法会抛出InterruptedException
-boolean tryAcquireNanos(int arg, long nanosTimeout) 在acquireInterruptibly(int arg)基础上增加了超时限制，如果当前线程在超时实现内没有获取到同步状态，那么将会返回false，如果获取到了就返回true
-boolean release(int arg)    独占式释放同步状态，该方法会在释放同步状态后，将同步队列中第一个节点包含的线程唤醒
-void acquireShared(int arg) 共享式的获取同步状态，如果当前线程未获取到同步状态，将会进入同步队列等待，与独占式获取的主要区别是在同一时刻可以有多个线程获取到同步状态。
-void acquireSharedInterruptibly(int arg)    与void acquireInterruptibly(int arg)相同，该方法响应中断
-boolean tryAcquireSharedNanos(int arg, long nanosTimeout)   在acquireSharedInterruptibly(int arg)的基础上增加了超时限制。
-boolean releaseShared(int arg)  共享式释放同步状态
-Collection<Thread> getQueuedThreads()   获取等待在同步队列上的线程集合。
+```java
+// 独占式获取同步状态，如果当前线程获取同步状态成功，则由该方法返回，否则，将会进入同步队列等待，该方法将会调用重写的tryAcquire(int arg)方法
+void acquire(int arg)
+
+// 与tryAcquire(int arg)相同，但是该方法响应中断，当前线程未获取到同步状态而进入同步队列中，如果当前线程被中断，则该方法会抛出InterruptedException
+void acquireInterruptibly(int arg)
+
+// 在acquireInterruptibly(int arg)基础上增加了超时限制，如果当前线程在超时实现内没有获取到同步状态，那么将会返回false，如果获取到了就返回true
+boolean tryAcquireNanos(int arg, long nanosTimeout)
+
+// 独占式释放同步状态，该方法会在释放同步状态后，将同步队列中第一个节点包含的线程唤醒
+boolean release(int arg)
+
+// 共享式的获取同步状态，如果当前线程未获取到同步状态，将会进入同步队列等待，与独占式获取的主要区别是在同一时刻可以有多个线程获取到同步状态。
+void acquireShared(int arg) 
+
+// 与void acquireInterruptibly(int arg)相同，该方法响应中断
+void acquireSharedInterruptibly(int arg)
+
+// 在acquireSharedInterruptibly(int arg)的基础上增加了超时限制。
+boolean tryAcquireSharedNanos(int arg, long nanosTimeout)   
+
+// 共享式释放同步状态
+boolean releaseShared(int arg)
+
+// 获取等待在同步队列上的线程集合。
+Collection<Thread> getQueuedThreads()
+```
 
 同步器提供的模板方法基本上分为3类：
 
 1. 独占式获取与释放同步状态
 2. 共享式获取与释放同步状态
 3. 查询同步队列中的线程等待情况
-
->自定义同步组件将使用同步器提供的模板方法来实现自己的同步语义。
-
-以AQS模板方法acquire(int arg)为例,这是一个获取执行许可的方法，arg表示获取许可的数量。其源码如下:
-
-```java
-public final void acquire(int arg) {
-    if (!tryAcquire(arg) && //功能1:state变量的维护，开发者需要覆写此方法
-        acquireQueued(addWaiter(Node.EXCLUSIVE), arg))//功能2：线程等待队列的维护，AQS覆写
-        selfInterrupt();//不响应中断，也就是不抛出异常，目前不在讨论范围，后面会介绍
-}
-```
-
->可以看到在模板方法，分别调用了state变量维护相关方法tryAcquire(arg)以及等待队列维护相关方法acquireQueued(addWaiter(Node.EXCLUSIVE), arg))。
-
-对于线程等待队列的维护，AQS已完成，我们不要考虑。
-
-对于state变量的维护，调用的是需要开发者覆写的tryAcquire(int arg)方法实现。在覆写过的tryAcquire(int arg)方法中，通过调用getState()、setState()、compareAndSetState(int expect, int update)方法，从而实现对state变量的维护与访问。
 
 4. 模板方法与需要开发者覆写的方法的对应关系
 
@@ -123,9 +122,11 @@ AQS中定义了8个模板方法，对应4个需要开发者覆写的方法：
 
     模板方法:
 
-* void acquire(int arg)
-* void acquireInterruptibly(int arg)
-* boolean tryAcquireNanos(int arg, long nanosTimeout)
+```java
+void acquire(int arg)
+void acquireInterruptibly(int arg)
+boolean tryAcquireNanos(int arg, long nanosTimeout)
+```
 
 >需要覆写的方法:boolean tryAcquire(int arg)
 
@@ -157,14 +158,10 @@ int tryAcquireShared(int arg)
 * 实现一个共享式同步组件的,只需要实现tryAcquireShared和tryReleaseShared即可
 * isHeldExclusively()是可选的。默认情况下，需要覆写的方法的实现都是抛出一个UnsupportedOperationException。
 
-5. 编写同步组件需要注意的地方
-
-* 使用新的接口和实现包装同步组件：在我们编写一个同步组件的时候，例如我们想实现一个独占锁，假设为Sync，其继承了AQS。只需要在Sync类中覆写tryRelease和tryAcquire即可，但是由于继承AQS的时候，会把tryAcquireShared、tryReleaseShared等共享锁方法也继承下来。而Sync并不会实现这些共享式同步组件的方法，因为Sync只是一个独占锁而已，从业务含义上，因此应该将这些方法屏蔽，从而防止用户误操作。按照最佳实现，屏蔽的方式是定义一个新的接口，假设用Mutex表示，这个接口只定义了独占锁相关方法，再编写一个类MutexImpl实现Mutex接口，而对于同步组件Sync类的操作，都封装在MutexImpl中。
-
-* 同步组件推荐定义为静态内部类：因为某个同步组件通常是为实现特定的目的而实现，可能只适用于特定的场合。如果某个同步组件不具备通用性，我们应该将其定义为一个私有的静态内部类。结合第一点，我们编写的同步组件Sync应该是MutexImpl的一个私有的静态内部类。
-
 三、使用AQS
 
-只有掌握了同步器的工作原理才能更加深入的理解并发包中的其他并发组件。所以下面通过一个独占锁的示例来深入了解一下同步器的工作原理。顾名思义，独占锁就是同一时刻只能有一个线程获取到锁，而其他获取锁的线程只能处于同步队列中等待，只有获取锁的线程释放了锁，后继的线程才能够获取锁。
+只有掌握了的工作原理才能更加深入的理解并发包中的其他并发组件。下面通过一个独占锁的示例来深入了解一下同步器的工作原理。
 
-案例代码：
+顾名思义，独占锁就是同一时刻只能有一个线程获取到锁，而其他获取锁的线程只能处于同步队列中等待，只有获取锁的线程释放了锁，后继的线程才能够获取锁。
+
+>案例:org.java.core.base.concurrent.chapter5.MutexImpl.java
