--- a/JAVA/core/src/main/resources/并发编程/7.0-java并发包--线程池/7.2-ThreadPoolExecutor.md
+++ b/JAVA/core/src/main/resources/并发编程/7.0-java并发包--线程池/7.2-ThreadPoolExecutor.md
@@ -46,7 +46,7 @@ ThreadPoolExecutor构造方法参数说明:
 3. 在ThreadPoolExecutor.DiscardPolicy中，不能执行的任务将被删除。 
 4. 在ThreadPoolExecutor.DiscardOldestPolicy中，如果执行程序尚未关闭，则位于工作队列头部的任务将被删除，然后重试执行程序（如果再次失败，则重复此过程）。 
 
-定义和使用其他种类的RejectedExecutionHandler 类也是可能的，但这样做需要非常小心，尤其是当策略仅用于特定容量或排队策略时
+>定义和使用其他种类的RejectedExecutionHandler 类也是可能的，但这样做需要非常小心，尤其是当策略仅用于特定容量或排队策略时
 
 >示例org.java.core.base.concurrent.chapter7.ThreadPoolExecutorTest.java
 
@@ -59,3 +59,21 @@ public interface ThreadFactory {
     Thread newThread(Runnable r);
     }
 ```
+
+我们可以完全可以创建一个自己的ThreadFactory: org.java.core.base.concurrent.chapter7.NamedThreadFactory.java
+
+然后在我们的测试代码中，可以在进行测试之前，传入这个对象实例:
+
+```java
+@Test
+public void threadPoolExecutorTest() throws InterruptedException {
+    ...
+    ThreadPoolExecutor threadPoolExecutor = new ThreadPoolExecutor(corePoolSize, maximumPoolSize, 
+                keepAliveTime, seconds, workQueue);
+    threadPoolExecutor.setThreadFactory(new NamedThreadFactory());//设置线程工厂
+    doTest(keepAliveTime, taskCount, threadPoolExecutor);
+    
+}
+```
+
+在使用ThreadPoolExecutor的情况下，`笔者是建议编写自己的ThreadFactory的`，这样我们使用jstack工具查看内存中的线程的时候，就能很容易的看出来那些线程是属于这个线程池的，这对于我们在解决一些问题，是非常有用的(这是笔者解决一个生产环境的死锁问题后的总结)。
