--- a/Database/SQL/查询操作.md
+++ b/Database/SQL/查询操作.md
@@ -213,16 +213,22 @@ FROM students s, classes c;`
 
 ### 连接查询
 
-连接查询是另一种类型的多表查询。连接查询对多个表进行JOIN运算，就是先确定一个主表作为结果集，然后，把其他表的行有选择性地“连接”在主表结果集上。
+>连接查询是另一种类型的多表查询。连接查询对多个表进行JOIN运算，就是先确定一个主表作为结果集，然后，把其他表的行有选择性地“连接”在主表结果集上。
 
-`SELECT s.id, s.name, s.class_id, s.gender, s.score FROM students s;`
+#### 4种连接查询的区别
 
-假设我们希望结果集同时包含"学生姓名"以及"这个学生所在班级的名称"，上面的结果集只有class_id列，缺少对应班级的name列。现在问题来了，存放班级名称的name列存储在classes表中，只有根据students表的class_id，找到classes表对应的行，再取出name列，就可以获得班级名称。
+SELECT ... FROM tableA ??? JOIN tableB ON tableA.column1 = tableB.column2;
+我们把tableA看作左表，把tableB看成右表:
 
-这时，`连接查询`就派上了用场。我们先使用最常用的一种内连接——INNER JOIN来实现：
+**INNER JOIN**
 
+我们希望结果集同时包含"学生姓名"以及"这个学生所在班级的名称"，上面的结果集只有class_id列，缺少对应班级的name列。现在问题来了，存放班级名称的name列存储在classes表中，只有根据students表的class_id，找到classes表对应的行，再取出name列，就可以获得班级名称。
+我们先使用最常用的一种内连接——INNER JOIN来实现：
+
+```sql
 `SELECT s.id, s.name, s.class_id, c.name class_name, s.gender, s.score
 FROM students s INNER JOIN classes c ON s.class_id = c.id;`
+```
 
 注意INNER JOIN查询的写法是：
 
@@ -231,49 +237,51 @@ FROM students s INNER JOIN classes c ON s.class_id = c.id;`
 3. 然后确定连接条件，使用ON <条件...>，这里的条件是s.class_id = c.id，表示students表的class_id列与classes表的id列相同的行需要连接；
 4. 可选：加上WHERE子句、ORDER BY等子句。
 
-使用别名不是必须的，但可以更好地简化查询语句。
+>使用别名不是必须的，但可以更好地简化查询语句。
 
->那什么是内连接（INNER JOIN）呢？有内连接（INNER JOIN）就有外连接（OUTER JOIN）。我们把内连接查询改成外连接查询，看看效果：
+INNER JOIN只返回同时存在于两张表的行数据，由于students表的class_id包含1，2，3，classes表的id包含1，2，3，4，所以，INNER JOIN根据条件s.class_id = c.id返回的结果集仅包含1，2，3。
 
+>INNER JOIN是选出两张表都存在的记录.(两表的交集)
+
+**RIGHT OUTER JOIN(简写:RIGHT JOIN)**
+
+```sql
 `SELECT s.id, s.name, s.class_id, c.name class_name, s.gender, s.score
 FROM students s
 RIGHT OUTER JOIN classes c
 ON s.class_id = c.id;`
+```
+RIGHT OUTER JOIN多了一行，多出来的一行是“四班”，但是，学生相关的列如name、gender、score都为NULL。
+,这也容易理解，因为根据ON条件s.class_id = c.id，classes表的id=4的行正是“四班”，但是，students表中并不存在class_id=4的行。
 
-执行上述RIGHT OUTER JOIN可以看到，和INNER JOIN相比，RIGHT OUTER JOIN多了一行，多出来的一行是“四班”，但是，学生相关的列如name、gender、score都为NULL。
+RIGHT OUTER JOIN返回右表(本例中即classes表)都存在的行。如果某一行仅在右表存在，那么结果集就会以NULL填充剩下的字段(注意左表中存在但是右表中不存在的行不会被查询出来.例如本例中的students中的class_id=5的行就不会被查询出来.)
 
-这也容易理解，因为根据ON条件s.class_id = c.id，classes表的id=4的行正是“四班”，但是，students表中并不存在class_id=4的行。
+>RIGHT OUTER JOIN(简写:RIGHT JOIN)是选出右表存在的记录,
 
-有RIGHT OUTER JOIN，就有LEFT OUTER JOIN，以及FULL OUTER JOIN。它们的区别是：
+**LEFT OUTER JOIN(缩写:LEFT JOIN)**
 
-INNER JOIN只返回同时存在于两张表的行数据，由于students表的class_id包含1，2，3，classes表的id包含1，2，3，4，所以，INNER JOIN根据条件s.class_id = c.id返回的结果集仅包含1，2，3。
+LEFT OUTER JOIN则返回左表(本例中为students表)都存在的行。如果我们给students表增加一列，并添加class_id=5，由于classes表并不存在id=5的列，所以，LEFT OUTER JOIN的结果会增加一列，对应的classes表中的class_name是NULL.
 
-RIGHT OUTER JOIN返回右表(本例中即classes表)都存在的行。如果某一行仅在右表存在，那么结果集就会以NULL填充剩下的字段。
+>LEFT OUTER JOIN(缩写:LEFT JOIN)是选出左表存在的记录.
 
-LEFT OUTER JOIN则返回左表(本例中为students表)都存在的行。如果我们给students表增加一列，并添加class_id=5，由于classes表并不存在id=5的列，所以，LEFT OUTER JOIN的结果会增加一列，对应的classes表中的class_name是NULL：
-
+```sql
 `SELECT s.id, s.name, s.class_id, c.name class_name, s.gender, s.score
 FROM students s
 LEFT OUTER JOIN classes c
 ON s.class_id = c.id;`
+```
 
-最后，我们使用FULL OUTER JOIN，它会把两张表的所有记录全部选择出来，并且，自动把对方不存在的列填充为NULL：
+**FULL OUTER JOIN**
+
+FULL OUTER JOIN,它会把两张表的所有记录全部选择出来，并且自动把对方不存在的列填充为NULL
+
+```sql
 `SELECT s.id, s.name, s.class_id, c.name class_name, s.gender, s.score
 FROM students s
 FULL OUTER JOIN classes c
 ON s.class_id = c.id;`
+```
 
-对于这么多种JOIN查询，到底什么使用应该用哪种呢？其实我们用图来表示结果集就一目了然了。
+>FULL OUTER JOIN则是选出左右表都存在的记录,不存在的用NULL补上.
 
-假设查询语句是：
-
-SELECT ... FROM tableA ??? JOIN tableB ON tableA.column1 = tableB.column2;
-我们把tableA看作左表，把tableB看成右表，那么
-
-1. INNER JOIN是选出两张表都存在的记录.(两表的交集)
-2. LEFT OUTER JOIN是选出左表存在的记录：
-3. RIGHT OUTER JOIN是选出右表存在的记录：
-4. FULL OUTER JOIN则是选出左右表都存在的记录
-
-注意:mysql不支持全外连接.
-
+>注意:mysql不支持全外连接.
