--- a/Database/SQL/查询操作.md
+++ b/Database/SQL/查询操作.md
@@ -93,13 +93,12 @@ id和name列名保持不变,score重命名为points：`SELECT id, score points, 
 
 `SELECT id, name, gender, score FROM students ORDER BY score DESC LIMIT 3 OFFSET 0;`
 
->上述查询LIMIT 3 OFFSET 0表示，对结果集从0号记录开始，最多取3条。注意SQL记录集的索引从0开始。
+>对结果集从0号记录开始，最多取3条。注意SQL记录集的索引从0开始。
 
 如果要查询第2页，那么我们只需要“跳过”头3条记录，也就是对结果集从3号记录开始查询，把OFFSET设定为3：
 
 `SELECT id, name, gender, score FROM students ORDER BY score DESC LIMIT 3 OFFSET 3;`
 
-类似的，查询第3页的时候，OFFSET应该设定为6,查询第4页的时候，OFFSET应该设定为9,由于第4页只有1条记录，因此最终结果集按实际数量1显示。LIMIT 3表示的意思是“最多3条记录”。
 
 分页查询的关键在于:`首先要确定每页需要显示的结果数量pageSize(这里是3），然后根据当前页的索引pageIndex(从1开始），确定LIMIT和OFFSET应该设定的值`：
 
