--- a/Webpage/JavaScript/jQuery/核心.md
+++ b/Webpage/JavaScript/jQuery/核心.md
@@ -49,3 +49,8 @@ $("div").siblings(".selected")
 HTML5规定可以为元素添加非标准型的属性，只需添加前缀data-.
 
 jQuery获取data-xx属性的方法:`$(this).data('xx');`
+
+**removeClass([class|fn])**
+
+从所有匹配的元素中删除全部或者指定的类(class).
+
