--- a/JAVA/core/src/main/resources/并发编程/5.0-Java并发包--同步组件/5.1-Unsafe类介绍.md
+++ b/JAVA/core/src/main/resources/并发编程/5.0-Java并发包--同步组件/5.1-Unsafe类介绍.md
@@ -1,11 +1,12 @@
-Unsafe类就是一把操作JAVA内存的钥匙。如果你想搞破坏,可以使用Unsafe这个类。这个类是属于sun.*API中的类。
+### Java为什么可以阻止开发人员犯低级错误?
 
-Unsafe做操作的是直接内存区，所以该类没有办法通过HotSpot的GC进行回收，需要进行手动回收，因此在使用此类时需要注意内存泄漏（Memory Leak）和内存溢出（Out Of Memory）。
+Java是一个安全的开发工具，它阻止开发人员犯很多低级的错误，而大部份的错误都是`基于内存管理方面`的。JAVA作为高级语言的重要创新一点就是`JVM的内存管理功能`，这完全区别于C语言开发过程中需要对变量的内存分配小心控制，`JVM很大程度解放了码农对于内存的调整。`
 
-因为这是一个平台相关的类(也就是与特定的平台有关系)，因此在实际开发中，建议不要使用。
+### 如何在Java中对内存进行操作
 
-Unsafe内存操作案例
+`Unsafe类就是一把操作JAVA内存的钥匙。这个类是属于sun.*API中的类.`
+Unsafe做操作的是直接内存区，所以该类没有办法通过HotSpot的GC进行回收，需要进行手动回收，因此在使用此类时需要注意内存泄漏（Memory Leak）和内存溢出（Out Of Memory）。`因为这是一个平台相关的类(也就是与特定的平台有关系)，因此在实际开发中，建议不要使用。`
 
->org.java.core.base.concurrent.chapter5.UnsafeDemo.java
+>Unsafe内存操作案例:`org.java.core.base.concurrent.chapter5.UnsafeDemo.java`
 
-sun.misc.Unsafe提供了可以随意查看及修改JVM中运行时的数据结构，尽管这些功能在JAVA开发本身是不适用的，Unsafe是一个用于研究学习HotSpot虚拟机非常棒的工具，因为它不需要调用C++代码，或者需要创建即时分析的工具。
+sun.misc.Unsafe提供了可以随意查看及修改JVM中运行时的数据结构，尽管这些功能在JAVA开发本身是不适用的，Unsafe是一个用于研究学习HotSpot虚拟机非常棒的工具.
