--- a/JAVA/core/src/main/resources/并发编程/5.0-Java并发包--同步组件/5.2-LockSupport.md
+++ b/JAVA/core/src/main/resources/并发编程/5.0-Java并发包--同步组件/5.2-LockSupport.md
@@ -1,12 +1,11 @@
 ### LockSupport基本介绍与基本使用
 
-LockSupport是JDK中比较底层的类，用来创建锁和其他同步工具类的基本线程阻塞原语。
-
->java锁和同步器框架的核心 AQS: AbstractQueuedSynchronizer，就是通过调用 LockSupport .park()和 LockSupport .unpark()实现线程的阻塞和唤醒的。
+>LockSupport是JDK中比较底层的类，用来创建锁和其他同步工具类的基本线程阻塞原语。java锁和同步器框架的核心 AQS: AbstractQueuedSynchronizer，就是通过调用`LockSupport.park()和 LockSupport.unpark()实现线程的阻塞和唤醒的。`
 
 LockSupport很类似于`二元信号量(只有1个许可证可供使用)`，如果这个许可还没有被占用，当前线程获取许可并继续执行；如果许可已经被占用，当前线 程阻塞，等待获取许可。
 
 ```java
+// 运行该代码，可以发现主线程一直处于阻塞状态。因为 许可默认是被占用的 ，调用park()时获取不到许可，所以进入阻塞状态。
 public static void main(String[] args)
 {
      LockSupport.park();
@@ -14,10 +13,8 @@ public static void main(String[] args)
 }
 ```
 
->运行该代码，可以发现主线程一直处于阻塞状态。因为 许可默认是被占用的 ，调用park()时获取不到许可，所以进入阻塞状态。
-
-如下代码：先释放许可，再获取许可，主线程能够正常终止。LockSupport许可的获取和释放，一般来说是对应的，如果多次unpark，只有一次park也不会出现什么问题，结果是许可处于可用状态。
 ```java
+// 如下代码：先释放许可，再获取许可，主线程能够正常终止。LockSupport许可的获取和释放，一般来说是对应的，如果多次unpark，只有一次park也不会出现什么问题，结果是许可处于可用状态。
 public static void main(String[] args)
 {
      Thread thread = Thread.currentThread();
@@ -27,9 +24,9 @@ public static void main(String[] args)
 }
 ```
 
-LockSupport是不可重入 的，如果一个线程连续2次调用 LockSupport .park()，那么该线程一定会一直阻塞下去。
-
 ```java
+MyLockSupport
+// 这段代码打印出a和b，不会打印c，因为第二次调用park的时候，线程无法获取许可出现死锁。
 public static void main(String[] args) throws Exception
 {
   Thread thread = Thread.currentThread();
@@ -44,49 +41,26 @@ public static void main(String[] args) throws Exception
 }
 ```
 
-这段代码打印出a和b，不会打印c，因为第二次调用park的时候，线程无法获取许可出现死锁。
-
-下面我们来看下LockSupport对应中断的响应性:
-
 ```java
-public static void t2() throws Exception
-{
-  Thread t = new Thread(new Runnable()
-  {
-    private int count = 0;
- 
-    @Override
-    public void run()
-    {
-      long start = System.currentTimeMillis();
-      long end = 0;
- 
-      while ((end - start) <= 1000)
-      {
-        count++;
-        end = System.currentTimeMillis();
-      }
- 
-      System.out.println("after 1 second.count=" + count);
- 
-    //等待或许许可
-      LockSupport.park();
-      System.out.println("thread over." + Thread.currentThread().isInterrupted());
- 
-    }
-  });
- 
-  t.start();
- 
-  Thread.sleep(2000);
- 
-  // 中断线程
-  t.interrupt();
- 
-  
-  System.out.println("main over");
-}
+// 来看看Thread类的实现:
+// 原来java.lang.Thread的实现当中有这么一个对象parkBlocker,
+// 搜索一下，Thread当中没有地方设置这个变量的值.
+// 
+// 再看下面的解释:
+
+/**
+ * The argument supplied to the current call to
+ * java.util.concurrent.locks.LockSupport.park.
+ * Set by (private) java.util.concurrent.locks.LockSupport.setBlocker
+ * Accessed using java.util.concurrent.locks.LockSupport.getBlocker
+ */
+
+//该参数提供给当前对java.util.concurrent.locks.LockSupport.park的调用
+
+//该对象parkBlocker由（私有的）java.util.concurrent.locks.LockSupport.setBlocker设置,使用java.util.concurrent.locks.LockSupport.getBlocker访问
+//
+//大致意思是，这个对象parkBlocker是用来记录线程被阻塞时被谁阻塞的。用于线程监控和分析工具来定位原因的。主要调用了LockSupport的getBlocker方法。
+
+//原来，parkBlocker是用于记录线程是被谁阻塞的。可以通过LockSupport的getBlocker获取到阻塞的对象。用于监控和分析线程用的。
+volatile Object parkBlocker;
 ```
-
-最终线程会打印出thread over.true。这说明 线程如果因为调用park而阻塞的话，能够响应中断请求(中断状态被设置成true)，但是不会抛出InterruptedException 。
-
