--- a/JAVA/core/src/main/resources/并发编程/5.0-Java并发包--同步组件/5.4-Lock接口与ReentrantLock.md
+++ b/JAVA/core/src/main/resources/并发编程/5.0-Java并发包--同步组件/5.4-Lock接口与ReentrantLock.md
@@ -1,7 +1,3 @@
-## Lock接口与ReentrantLock
-
-有些锁可以允许多个线程并发的访问共享资源，比如读写锁.
-
 ### Lock接口实现锁的功能和通过synchronized块的区别
 
 Lock接口出现以前，Java程序是靠synchronized关键字实现锁功能的，而JDK1.5之后，并发包中新增了Lock接口（以及相关实现类）来实现锁的功能，它提供了与synchronized关键字类似的同步功能。只是在使用的时候，需要显示地获取和释放锁。虽然它缺少了(通过synchronized块或者方法所提供的)隐式获取释放锁的便捷性，但是确拥有了锁获取与释放的可操作性、可中断的获取锁以及超时获取锁等多种synchronized关键字所不具备的同步特性。
@@ -14,54 +10,14 @@ Lock接口出现以前，Java程序是靠synchronized关键字实现锁功能的
 2. 能被中断的获取锁:与synchronized不同，获取到锁的线程能够响应中断，当获取到锁的线程被中断时，中断异常将会被抛出，同时锁会被释放
 3. 超时获取锁:在指定的截止时间之前获取锁，如果截止时间到了仍旧无法获取锁，则返回
 
-### Lock接口的API
+## Lock接口与ReentrantLock
 
-Lock是一个接口，它定义了锁获取和释放的基本操作，其API如下表所示：
+>Lock接口有三个实现类，分别是ReentrantLock(可重入锁)、ReadLock(读锁)、
+WriteLock(写锁。Segment继承了ReentrantLock。，有些锁可以允许多个线程并发的访问共享资源，比如读写锁，下面以ReentrantLock为例进行讲解.
 
-```java
-// 获取锁，调用该方法当前线程会获取锁，当锁获得后，该方法返回
-void lock()
+### ReentrantLock内部源码分析
 
-// 可中断的获取锁，和lock()方法不同之处在于该方法会响应中断，即在锁的获取中可以中断当前线程
-void lockInterruptibly() throws InterruptedException    
-
-// 尝试非阻塞的获取锁，调用该方法后立即返回。如果能够获取到返回true，否则返回false
-boolean tryLock()
-
-// 超时获取锁，当前线程在以下三种情况下会被返回:1.当前线程在超时时间内获取了锁,2.当前线程在超时时间内被中断,3. 超时时间结束，返回false
-boolean tryLock(long time, TimeUnit unit) throws InterruptedException   
-
-// 释放锁
-void unlock()
-
-// 获取等待通知组件，该组件和当前的锁绑定，当前线程只有获取了锁，才能调用该组件的wait()方法，而调用后，当前线程将释放锁
-Condition newCondition()
-```
-
-可以看到，Lock接口有三个实现类，分别是ReentrantLock(可重入锁)、ReadLock(读锁)、WriteLock(写锁)。Segment继承了ReentrantLock。
-
-在本节中我们以ReentrantLock来讲解Lock接口的使用。
-
-以下代码说明了ReentrantLock的使用方式
-
-```java
-// Lock接口使用的模板方法
-    Lock lock = new ReentrantLock();
-    ...
-    lock.lock();//获取锁
-    try {
-        ...
-    } finally {
-        lock.unlock();//释放锁
-    }
-//在finally中释放锁，目的是在保证获取到锁之后，一定能够被释放。
-```
-
->不要将锁的获取过程写在try块中。因为如果在获取锁(自定义锁的实现)时，发生了异常，异常抛出的同时，也会导致锁的无故释放。
-
-### ReentrantLock内部组成
-
->ReentrantLock支持公平锁(FairSync)和非公平锁(NonfairSync)。
+>ReentrantLock实现了Lock接口,ReentrantLock支持公平锁(FairSync)和非公平锁(NonfairSync)。
 
 在上面的案例中，我们使用new ReentrantLock()，事实上使用的就是非公平锁。
 我们可以在源码中看到：
@@ -83,4 +39,3 @@ Sync类图：
 2. NonfairSync -> Sync-> AbstractQueuedSynchronizer
 
 >我们可以看到FairSync和NonfairSync最终都继承了AbstractQueuedSynchronizer，事实上，自JDK1.5之后众多同步组件都继承了这个类。其是基于模板方法设计的，把很多公共的操作抽取出来，并实现，而某些细节不能确定如何实现时，则定义为抽象方法，由子类实现。例如我们这里，Sync类就直接之继承了AbstractQueuedSynchronizer，并实现了部分抽象方法，并把更具体的实现交给子类FairSync和NonfairSync实现。  
-
