--- a/JAVA/core/src/main/resources/并发编程/5.0-Java并发包--同步组件/5.5-Condition接口.md
+++ b/JAVA/core/src/main/resources/并发编程/5.0-Java并发包--同步组件/5.5-Condition接口.md
@@ -1,4 +1,6 @@
-### Condition的基本介绍
+# Condition的基本介绍
+
+## Condition的作用
 
 Condition的作用是替代Object的监视器方法（wait、notify 和 notifyAll），其主要是与Lock配合使用。
 
@@ -13,14 +15,40 @@ lock.unlock();
 
 >因此，为了实现这个功能，我们必须要有另外一种替代的机制，这就是Condition的作用。
 
-Condition接口的方法与Object的监视器主要方法对比
+## Condition接口的方法与Object的监视器主要方法对比
 
-Condition    Object  作用
-await()      wait()  使当前线程在接到信号或被中断之前一直处于等待状态。
-await(long time, TimeUnit unit) wait(long timeout)  造成当前线程在接到信号、被中断或到达指定等待时间之前一直处于等待状态。
-signal()    notify()    唤醒一个等待线程。
-signalAll() notifyAll() 唤醒所有等待线程。
-
+<table>
+<thead>
+    <tr>
+        <th>Condition</th>
+        <th>Object</th>
+        <th>作用</th>
+    </tr>
+</thead>
+<tbody>
+    <tr>
+        <td>await()</td>
+        <td>wait()</td>
+        <td>使当前线程在接到信号或被中断之前一直处于等待状态。</td>
+    </tr>
+    <tr>
+        <td>await(long time, TimeUnit unit)</td>
+        <td> wait(long timeout)</td>
+        <td>造成当前线程在接到信号、被中断或到达指定等待时间之前一直处于等待状态。</td>
+    </tr>
+    <tr>
+        <td>signal()</td>
+        <td>notify()</td>
+        <td>唤醒一个等待线程。</td>
+    </tr>
+    <tr>
+        <td>signalAll()</td>
+        <td>notifyAll()</td>
+        <td>唤醒所有等待线程。</td>
+    </tr>
+</tbody>
+</table>
+   
 >类似于wait,notify和notifyAll必须在同步代码块中使用，Condition对象的方法也必须要写在Lock.lock与Lock.unLock()代码之间
 
 ```java
@@ -34,4 +62,19 @@ condition.signalAll();*/
 lock.unlock();
 ```
 
+## Condition源码
 
+```java
+// from jdk1.5
+public interface Condition {
+    void await() throws InterruptedException;
+    long awaitNanos(long nanosTimeout) throws InterruptedException;
+    boolean await(long time, TimeUnit unit) throws InterruptedException;
+    void signal();
+    void signalAll();
+}
+```
+
+Condition的实现可以提供不同于 Object 监视器方法的行为和语义，比如受保证的通知排序，或者在执行通知时不需要保持一个锁。如果某个实现提供了这样特殊的语义，则该实现必须记录这些语义。 
+
+>注意，Condition 实例只是一些普通的对象，它们自身可以用作 synchronized 语句中的目标，并且可以调用自己的 wait 和 notification 监视器方法。获取 Condition 实例的监视器锁或者使用其监视器方法，与获取和该 Condition 相关的 Lock 或使用其 waiting 和 signalling方法没有什么特定的关系。为了避免混淆，建议除了在其自身的实现中之外，切勿以这种方式使用 Condition 实例。  
