--- a/JAVA/core/src/main/java/org/java/core/base/collection/list/链表.md
+++ b/JAVA/core/src/main/java/org/java/core/base/collection/list/链表.md
@@ -1,4 +1,10 @@
+### List：有序的可重复的Collection
 
+使用此接口能够精确的控制每一个元素插入的位置，可以通过索引来访问List中的元素。
+
+* ArrayList采用数组实现，数组的访问速度要比链表快，所以ArrayList更适合查询操作，
+* LinkedList采用链表实现，插入和删除的效率要高于数组，
+* Vector是一种古老的实现类，采用数组的实现，内部方法使用了Sychronized关键字，是线程安全的。
 
 List的接口继承关系:
 
