--- a/JAVA/core/src/main/resources/并发编程/5.0-Java并发包--同步组件/5.6-CountDownLatch.md
+++ b/JAVA/core/src/main/resources/并发编程/5.0-Java并发包--同步组件/5.6-CountDownLatch.md
@@ -1,20 +1,28 @@
+## CountDownLatch源码分析
+
 CountDownLatch类位于java.util.concurrent包下，利用它可以实现类似计数器的功能。比如有一个任务A，它要等待其他4个任务执行完毕之后才能执行，此时就可以利用CountDownLatch来实现这种功能了。
 
-CountDownLatch类只提供了一个构造器：
-
 ```java
-public CountDownLatch(int count) {  };  //参数count为计数值
+// jdk1.5引入
+public class CountDownLatch {
+    // CountDownLatch类只提供了一个构造器：
+    public CountDownLatch(int count) {  };  //参数count为计数值
 
-// 然后下面这3个方法是CountDownLatch类中最重要的方法：
+    // CountDownLatch也属于一个同步组件，内部有一个私有的静态内部类Sync
+    // ,Sync继承了AQS.
 
-//调用await()方法的线程会被挂起，它会等待直到count值为0才继续执行
-public void await() throws InterruptedException { };   
+    // 下面3个方法是CountDownLatch类中最重要的方法：
 
-//和await()类似，只不过等待一定的时间后count值还没变为0的话就会继续执行
-public boolean await(long timeout, TimeUnit unit) throws InterruptedException{}
+    //调用await()方法的线程会被挂起，它会等待直到count值为0才继续执行
+    public void await() throws InterruptedException { };   
 
-//将count值减1
-public void countDown() { };
+    //和await()类似，只不过等待一定的时间后count值还没变为0的话就会继续执行
+    // 返回true表示指定时间内所有线程执行完，返回false表示指定时间内，所有线程没有执行完
+    public boolean await(long timeout, TimeUnit unit) throws InterruptedException{}
+
+    //将count值减1
+    public void countDown() { };
+}
 ```
 
 
