--- a/Database/Redis/03_3.1_热身.md
+++ b/Database/Redis/03_3.1_热身.md
@@ -42,6 +42,8 @@ DEL key [key …]
 比如要删除所有以“user:”开头的键，就可以执行redis-cli KEYS "user:*" | xargs redis-cli DEL。另外由于DEL 命令支持多个键作为参数， 所以还可
 以执行redis-cli DEL 'redis-cli KEYS "user:*"'来达到同样的效果，但是性能更好。
 
+`FLUSHALL命令可以清空一个Redis实例中所有数据库中的数据`
+
 4．获得键值的数据类型
 
 `TYPE key`,TYPET命令用来获得键值的数据类型，返回值可能是string（字符串类型）、hash（散列类型）、list（列表类型）、set（集合类型）、zset（有序集合类型）。例如：
