--- a/JAVA/core/src/main/resources/并发编程/5.0-Java并发包--同步组件/5.0-Java并发包--同步组件.md
+++ b/JAVA/core/src/main/resources/并发编程/5.0-Java并发包--同步组件/5.0-Java并发包--同步组件.md
@@ -1,8 +1,6 @@
 ## Java并发包--同步组件
 
-在JDK1.5，引入了Java并发包(java.util.concurrent)
-
-将这个包中的内容分为4部分来讲解(建议按照顺序学习)：
+在JDK1.5，引入了Java并发包(java.util.concurrent),将这个包中的内容分为4部分来讲解(建议按照顺序学习)：
 
 1. 基础同步组件：包括位于java.util.concurrent.locks子包(Lock、ReentrantLock、ReadWriteLock等)，以及java.util.concurrent包下的CountDownLatch、Semaphore、CylicBarrer等。
 2. 同步数据结构：位于java.util.concurrent.atomic子包下面的原子并发类，以及java.util.concurrent包下的高级的并发数据结构ArrayBlockingQueue 、ConcurrentHashMap 、ConcurrentLinkedQueue 、ConcurrentSkipListMap 、ConcurrentSkipListSet 、CopyOnWriteArrayList 、CopyOnWriteArraySet 、LinkedBlockingDeque 、LinkedBlockingQueue 、PriorityBlockingQueue等。 
