--- a/JAVA/core/src/main/resources/并发编程/5.0-Java并发包--同步组件/5.3-AbstractQueuedSynchronizer.md
+++ b/JAVA/core/src/main/resources/并发编程/5.0-Java并发包--同步组件/5.3-AbstractQueuedSynchronizer.md
@@ -1,8 +1,9 @@
 ## AbstractQueuedSynchronizer(AQS-抽象队列同步器)概述
 
-1. AbstractQueuedSynchronizer是JDK 1.5引入的，构建同步组件的基础，通常简称为AQS。
+1. AbstractQueuedSynchronizer是JDK 1.5引入的，用来构建锁或者其他同步组件的基础，通常简称为AQS。
 2. AQS是java并发包中最核心的一个类，没有之一。可以说没有弄懂AQS，就没有真正的掌握java并发包，AQS是在LockSupport和Unsafe类的基础上实现的
 3. 同步组件内部都是使用了AQS来构建的，AQS是同步组件构建的基础,AQS的使用方式主要是通过继承，`注意不是直接让同步组件继承`，而是在同步组件内部定义一个静态内部类继承AQS，并覆写其特定的方法，来实现具有不同功能的同步组件
+4. Java中信号量（Semaphore）、读写锁（ReadWriteLock）、计数器（CountDownLatch）以及FutureTask等都是基于AQS实现的，可见这个抽象类的地位多么不一般
 
 >本节主要是学习使用AQS构建我们自己的同步组件，然后以后介绍JDK的同步组件.
 
@@ -142,6 +143,8 @@ void acquireInterruptibly(int arg)
 boolean tryAcquireNanos(int arg, long nanosTimeout)
 
 // 以上3个方法对应需要覆写的方法:
+// 独占式获取同步状态，需先询问是否允许被获取，允许则利用CAS改状态
+// 方法如果不实现，则抛出UnsupportedOperationException异常
 boolean tryAcquire(int arg)
 ```
 
@@ -150,6 +153,7 @@ boolean tryAcquire(int arg)
 boolean tryAcquireNanos(int arg, long nanosTimeout)
 
 // 需要覆写的方法:
+// 独占式释放同步状态,如果不实现，则抛出UnsupportedOperationException异常
 boolean tryRelease(int arg)
 ```
 
@@ -161,6 +165,7 @@ void acquireShared(int arg)
 void acquireSharedInterruptibly(int arg)
 boolean tryAcquireSharedNanos(int arg, long nanosTimeout)
 // 以上3个方法，需要覆写的方法:
+// 共享式获取同步状态。如果不实现，则抛出UnsupportedOperationException异常
 int tryAcquireShared(int arg)
 
 
@@ -168,10 +173,11 @@ int tryAcquireShared(int arg)
 boolean tryReleaseShared(int arg)
 
 // 需要覆写的方法
+// 共享式释放同步状态。如果不实现，则抛出UnsupportedOperationException异常
 boolean tryReleaseShared(int arg)
 ```
 
->此外，还需要一个isHeldExclusively()方法需要覆写，不过其没有对应的模板方法。通常情况下，
+>此外，还需要一个isHeldExclusively()方法需要覆写(查询当前同步器是否在独占模式下被占用)，不过其没有对应的模板方法。通常情况下，
 我们实现的同步组件要不就是独占式，要不就是共享式，但是也有例外，例如ReadWriteLock同时实现了独占式与共享式。
 
 * 因此当我们需要实现一个独占式同步组件时，只需要覆写AQS的tryAcquire和tryRelease即可
